# mcl-tool

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: api.md  architecture.md  development.md  devlog.md  testing.md
docs/features/01.plugin-system/: INDEX.md  README..md  architecture.md  ideas.md  implementation-plan.md  plugin-development-guide.md  progress-tracker.md
docs/features/02.mcp-server/: INDEX.md  architecture.md  implementation-plan.md  progress-tracker.md
src/mcl/: __init__.py  cli.py  commands.py  config.py  executor.py  plugins.py  templates.py
src/mcl/mcp/: __init__.py  prompts.py  resources.py  server.py  tools.py  utils.py
tests/: test_cli.py  test_commands.py  test_config.py  test_executor.py  test_interactive_menu.py  test_plugins.py  test_templates.py
tests/fixtures/mcl_plugin_test/: README.md  pyproject.toml
tests/fixtures/mcl_plugin_test/mcl_plugin_test/: __init__.py  cli.py
tests/mcp/: __init__.py  test_server.py
