[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcl-tool"
version = "0.4.1"
description = "My Command Line: A personal generic customizable CLI tool"
readme = "README.md"
authors = [{name = "Emanuele Strazzullo", email = "stramanu94@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "click>=8.0",
    "questionary>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "mypy",
    "black",
    "pre-commit",
    "types-click",
]

[project.scripts]
mcl = "mcl.cli:cli"

[project.urls]
Homepage = "https://github.com/stramanu/mcl-tool"
Repository = "https://github.com/stramanu/mcl-tool"
Documentation = "https://github.com/stramanu/mcl-tool/tree/main/docs"

[tool.black]
line-length = 88

[tool.mypy]
strict = true
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "click"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "questionary"
ignore_missing_imports = true
